Added pagination and search
