# server/Application/Interfaces/Admin/UserManagement/IUserManagementService.cs
@@ -5,9 +5,8 @@ namespace Application.Interfaces.Admin.UserManagement;
 
 public interface IUserManagementService
 {
-    User? GetUserById(string email);
     Task<UsersDetailsDto> RegisterUser(RegisterRequestDto dto);
     Task<UsersDetailsDto> UpdateUser(UpdateRequestDto request);
     Task<DeleteResponseDto> SoftDelete(string userId);
-    Task<GetAllUsersResponseDto> GetAllUsers();
+    Task<GetAllUsersResponseDto> GetAllUsers(int page, int pageSize, string? search);
 }
