# server/Infrastructure.Postgres/Repositories/Admin/UserManagement/UserManagementRepository.cs
@@ -1,4 +1,5 @@
 using Application.Interfaces.Infrastructure.Postgres.Admin.UserManagement;
+using Application.Models.Enums;
 using Core.Domain.Entities;
 using Infrastructure.Postgres.Scaffolding;
 using Microsoft.EntityFrameworkCore;
@@ -7,21 +8,33 @@ namespace Infrastructure.Postgres.Repositories.Admin.UserManagement;
 
 public class UserManagementRepository(AppDbContext ctx) : IUserManagementRepository
 {
-    public List<User> GetAll()
+    public List<User> GetAllUsers(int page, int pageSize, out int totalUsers, string? search = null)
     {
-        return ctx.Users
-            .Include(c => c.Projects)
+        var query = ctx.Users
+            .Include(u => u.Projects)
+            .Where(u => u.Isdeleted == false && u.Role == Roles.UserRole);
+        
+        if (!string.IsNullOrWhiteSpace(search))
+        {
+            search = search.ToLower();
+            query = query.Where(u =>
+                u.Email.ToLower().Contains(search) ||
+                u.Firstname.ToLower().Contains(search) ||
+                u.Lastname.ToLower().Contains(search));
+        }
+        
+        totalUsers = query.Count();
+        
+        return query
+            .OrderBy(u => u.Firstname)
+            .Skip((page - 1) * pageSize)
+            .Take(pageSize)
             .ToList();
     }
 
     public User? GetUserByEmailOrNull(string email)
     {
         return ctx.Users.FirstOrDefault(u => u.Email.ToLower() == email.ToLower());
-    }
-    
-    public User? GetUserByIdOrNull(Guid id)
-    {
-        return ctx.Users.FirstOrDefault(u => u.Id == id);
     }
     
     public async Task<User?> GetByIdAsync(Guid id)
@@ -38,11 +51,6 @@ public class UserManagementRepository(AppDbContext ctx) : IUserManagementReposit
 
     public async Task<User> UpdateUser(User user)
     {
-        /*
-        ctx.Users.Update(user);
-        await ctx.SaveChangesAsync();
-        return user;
-        */
         var existing = await ctx.Users.AsTracking().FirstOrDefaultAsync(u => u.Id == user.Id);
         if (existing == null) throw new InvalidOperationException("User not found");
 
